Update second circle

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>ĐM THẰNG BÉO</title>
     <script src="script.js" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -19,10 +20,9 @@
             <div class="fill_right">
 			
 			</div>
-   
 			
             <div class="percent">
-            
+            	<p id="second"></p>
             </div>
 		</div>
 	</div>
